--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
   <script src="js/libs/underscore-min.js"></script>
   <script src="js/libs/backbone-min.js"></script>
 
+  <script src="js/shots_fired.js"></script>
   <script src="js/uber_get_ride.js"></script>
   <script src="js/main.js"></script>
 </body>
