--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,21 @@
-ul .badge{
-  background-color: #469DD8;
-}
+ul .badge {
+  background-color: #469DD8; }
 
-.body ul li{
-  text-align: left;
-  padding-left: 30px;
-}
-
-.body{
+.body {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
-  margin-left: auto;
-}
+  margin-left: auto; }
+  .body ul li {
+    text-align: left;
+    padding-left: 30px; }
+  .body .alert {
+    margin: 20px auto; }
+  .body .panel-body {
+    line-height: 25px;
+    padding: 20px; }
+
+.error {
+  width: 700px; }
+
+/*# sourceMappingURL=style.css.map */
