--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
 <body style="text-align: center; margin: 40px 0;" >
 
   <div class="body">
-    <div class='error'></div>
+    <div class="alert alert-danger error" role="alert"></div>
+    
   </div>
 
   <center><div id="microphone"></div></center>
@@ -19,7 +20,7 @@
     {% raw %}
     <ul class="list-group">
       {{#each collection}}
-        <li class="list-group-item"><span class="badge pull-right">{{time}} min</span>{{ride}}</li>
+      <li class="list-group-item"><span class="badge pull-right">{{time}}</span>{{ride}}</li>
       {{/each}}
     </ul>
     {% endraw %}
@@ -27,19 +28,29 @@
 
   <script id='shots-fired-template' type='text/x-handlebars-template'>
    <p>Pew Pew.</p>
-  </script>
+ </script>
 
-  <script src="microphone/microphone.js"></script>
-  <script src="js/libs/jquery-2.1.1.js"></script>
-  <script src="js/libs/underscore-min.js"></script>
-  <script src="js/libs/backbone-min.js"></script>
-  <script src="js/libs/handlebars.js"></script>
-  <script src='js/libs/bootstrap.min.js'></script>
+ <script id='search-template' type='text/x-handlebars-template'>
+  {% raw %}
+  <div class="panel panel-default">
+    <div class="panel-body">
+      {{text}}
+    </div>
+  </div>
+  {% endraw %}
+</script>
 
-  <script src="js/remind.js"></script>
-  <script src="js/shots_fired.js"></script>
-  <script src="js/uber_get_ride.js"></script>
-  <script src="js/main.js"></script>
+<script src="microphone/microphone.js"></script>
+<script src="js/libs/jquery-2.1.1.js"></script>
+<script src="js/libs/underscore-min.js"></script>
+<script src="js/libs/backbone-min.js"></script>
+<script src="js/libs/handlebars.js"></script>
+<script src='js/libs/bootstrap.min.js'></script>
+
+<script src="js/remind.js"></script>
+<script src="js/shots_fired.js"></script>
+<script src="js/uber_get_ride.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
