--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,7 @@ ul .badge {
     padding: 20px; }
 
 .error {
-  width: 700px; }
+  width: 700px;
+  display: none; }
 
 /*# sourceMappingURL=style.css.map */
