--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,9 @@
   </script>
 
   <script id='shots-fired-template' type='text/x-handlebars-template'>
-   <p>Pew Pew.</p>
+    <div class="width700">
+      <p>Pew Pew.</p>
+    </div>
  </script>
 
  <script id='search-template' type='text/x-handlebars-template'>
