--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -18,9 +18,25 @@ ul .badge{
     line-height: 25px;
     padding:20px;
   }
+  .list-group{
+    width: 400px;
+    margin: 20px auto;
+  }
+  .panel{
+    width: 700px;
+    margin: 20px auto;
+  }
 }
 
 .error{
   width: 700px;
   display: none;
+}
+
+.width700{
+  width: 700px;
+}
+
+#microphone{
+  margin-bottom: 20px;
 }
