--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -3,8 +3,6 @@ ul .badge{
 }
 
 .body{
-  padding-right: 15px;
-  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
   ul li{
@@ -39,4 +37,15 @@ ul .badge{
 
 #microphone{
   margin-bottom: 20px;
+}
+
+.well{
+  width: 700px;
+  margin: 20px auto;
+  padding: 20px 0;
+}
+
+body .container{
+  width: 700px;
+  padding: 0;
 }
