--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="panel panel-primary">
       <!-- Default panel contents -->
-      <div class="panel-heading">Sample queries:</div>
+      <div class="panel-heading">Sample queries (call or text +1 226 270 1006):</div>
 
       <!-- List group -->
       <ul class="list-group">
